# skills

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: default_cicd_public.yml
bx-bash-clean-architecture/: SKILL.md
bx-bash-reference/: SKILL.md  job-control-readline-history.md
bx-enhance-code-quality/: SKILL.md
bx-python-clean-architecture/: review-checklists.md  script-mode.md
bx-python-libraries-to-use/: SKILL.md
bx-skill-writer/: testing-skills-with-subagents.md
bx-textual/: FAQ.md  SKILL.md  getting_started.md  index.md  roadmap.md  widget_gallery.md
bx-textual/api/: app.md  cache.md  color.md  command.md  compose.md  constants.md  coordinate.md  dom_node.md  geometry.md  getters.md  highlight.md  index.md  layout.md  lazy.md  logger.md  pilot.md  query.md  screen.md  scroll_view.md  signal.md  style.md  suggester.md  system_commands_source.md  walk.md  widget.md  worker.md
bx-textual/css_types/: border.md  hatch.md  horizontal.md  index.md  integer.md  keyline.md  pointer.md  position.md  text_align.md  text_style.md  vertical.md
bx-textual/events/: app_blur.md  app_focus.md  descendant_blur.md  descendant_focus.md  focus.md  index.md  leave.md  mouse_move.md  mouse_scroll_down.md  mouse_scroll_right.md  mouse_scroll_up.md  paste.md  show.md  unmount.md
bx-textual/examples/guide/command_palette/: command01.py
bx-textual/examples/guide/compound/: byte01.py
bx-textual/examples/guide/widgets/: checker04.py
bx-textual/examples/tutorial/: stopwatch.py
bx-textual/examples/widgets/: directory_tree_filtered.py
bx-textual/guide/: actions.md  command_palette.md  content.md  design.md  index.md  input.md  layout.md  screens.md  styles.md  widgets.md  workers.md
bx-textual/how-to/: center-things.md  design-a-layout.md  index.md  render-and-compose.md  style-inline-apps.md  work-with-containers.md
bx-textual/reference/: index.md
bx-textual/styles/: align.md  border.md  border_subtitle_background.md  border_title_style.md  display.md  dock.md  hatch.md  height.md  index.md  layers.md  layout.md  offset.md  scrollbar_gutter.md  scrollbar_visibility.md  text_align.md  text_opacity.md  text_overflow.md  text_wrap.md  width.md
bx-textual/styles/grid/: column_span.md  grid_columns.md  grid_rows.md  grid_size.md  index.md  row_span.md
bx-textual/styles/links/: index.md  link_background.md  link_background_hover.md  link_color.md  link_style.md
bx-textual/styles/scrollbar_colors/: index.md  scrollbar_background_hover.md  scrollbar_color.md  scrollbar_color_active.md
bx-textual/widgets/: checkbox.md  collapsible.md  content_switcher.md  data_table.md  digits.md  directory_tree.md  footer.md  header.md  index.md  input.md  link.md  list_item.md  list_view.md  loading_indicator.md  log.md  markdown.md  markdown_viewer.md  masked_input.md  option_list.md  placeholder.md  progress_bar.md  radiobutton.md  rich_log.md  rule.md  select.md  sparkline.md  switch.md  tabbed_content.md  tabs.md  text_area.md  toast.md  tree.md
bx-uv/: SKILL.md
md-table-formatting/: SKILL.md  reformat_tables.py
notebooks/: Quickstart.ipynb
proxmox/: draft.md
proxmox/admin-guide/: SKILL.md  appendix-d-calendar-events.md  appendix-e-vcpu-list.md  appendix-g-markdown-primer.md  appendix-h-license.md  ch04-gui.md  ch09-storage-replication.md  ch17-notifications.md  ch18-service-daemons.md  ch21-bibliography.md  extract.py
proxmox/admin-guide/appendix-a-cli/: pct-list-resize.md  pveam.md  pvecm.md  pveperf.md  pvesh.md  pvesr.md  qm-create-help.md  qm-import-listsnapshot.md  qm-set-wait.md  qmrestore.md
proxmox/admin-guide/ch03-host-admin/: btrfs.md  external-metrics.md  host-bootloader-grub-secureboot.md  ksm.md  lvm.md  network-bonding-vlans.md  network-configuration.md  software-updates.md  zfs-administration.md  zfs-advanced.md
proxmox/admin-guide/ch05-cluster-manager/: _index.md
proxmox/admin-guide/ch07-storage/: btrfs-backend.md  cifs-backend.md  directory-backend.md  zfs-over-iscsi.md
proxmox/admin-guide/ch08-ceph/: cephfs.md  crush-and-client.md  monitors-and-managers.md  osds.md  pools-and-config.md
proxmox/admin-guide/ch10-qemu/: configuration-options.md  importing-vms.md  locks.md  managing-with-qm.md  vm-cpu-memory.md  vm-settings-advanced.md  vm-settings-hardware.md  vm-usb-pci-boot.md
proxmox/admin-guide/ch11-containers/: _index.md  backup-migration-config.md  container-settings.md  container-storage.md  locks.md  technology-and-distributions.md
proxmox/admin-guide/ch12-sdn/: fabrics.md  firewall-and-examples.md  ipam-dns-dhcp.md
proxmox/admin-guide/ch13-firewall/: _index.md  firewall-advanced.md
proxmox/admin-guide/ch14-user-management/: authentication-realms.md  permissions-and-examples.md  users-groups-tokens.md
proxmox/admin-guide/ch15-high-availability/: _index.md  maintenance-and-scheduling.md  overview-and-how-it-works.md
proxmox/admin-guide/ch16-backup-restore/: _index.md
src/bx_skills/: __init__.py  __init__conf__.py  app.py  cli.py  core.py  theme.py
src/bx_skills/catalog_commands/: tfbpr.md
src/bx_skills/catalog_skills/bx-bash-clean-architecture/: canonical-example.md  review-checklists.md  script-mode.md
src/bx_skills/catalog_skills/bx-bash-reference/: SKILL.md  bash-features.md  functions-parameters-expansions.md  redirections-and-execution.md  shell-builtins.md  shell-syntax-and-commands.md  shell-variables.md
src/bx_skills/catalog_skills/bx-humanise-de/: SKILL.md
src/bx_skills/catalog_skills/bx-humanize-de/: SKILL.md
src/bx_skills/catalog_skills/bx-humanize-en/: SKILL.md
systematic-debugging/: condition-based-waiting.md
test-driven-development/: SKILL.md  testing-anti-patterns.md
tests/: conftest.py  test_app_integration.py  test_app_screens.py  test_app_skill_item.py  test_cli.py  test_core_discovery.py  test_core_execution.py  test_core_frontmatter.py  test_core_helpers.py  test_core_planning.py  test_core_resolution.py  test_init.py  test_theme.py
writing-skills/: SKILL.md  testing-skills-with-subagents.md
(+301 files in other folders)
